# h3-toolkit

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
benchmarks/: bench_cpp_binding.py  bench_pure_cpp.cpp  bench_pure_python.py  benchmark_backends.py  benchmark_cpp.cpp  benchmark_python.py  generate_stats_table.py  verify_boundary.py  verify_cpp.cpp
docs/: _config.yml  api_reference.md  boundary_children.json  boundary_coverage_demo.ipynb  concepts.md  demo.html  demo.md  demo_data.js  demo_data.json  demo_generation.ipynb  generate_demo_data.py  index.md
examples/: boundary_from_children.ipynb  buffered_polygon_demo.ipynb  demo.ipynb
src/bindings/: python_bindings.cpp
src/cpp/include/: h3_toolkit.hpp
src/cpp/src/: h3_toolkit.cpp
src/python/h3_toolkit/: __init__.py  geom.py  utils.py
tests/cpp/: test_h3_toolkit.cpp
tests/python/: test_utils.py
